# project-recommender

./: backup.sql
backend/: .gitignore  Cargo.toml  Dockerfile  backup.sql  schema.sql  seed_data.sql
backend/.sqlx/: query-1cdec777ea8e2d536b45fe243bc91bdfddb1fc11bf27171f54b56f338e2f703b.json  query-3bc9e43c3e1f4a79e38add961fa8e56a5bb6e6a59f4b67ad99299f5d0dc02d19.json  query-5e26d3f4d835dacc4b380ae737c34059b8181352dd2599336719748475c11019.json  query-8a09c351055a077ceefed2ce8b5e15c67cf7c75f2cb6907969822b8bbb2f01fc.json  query-8bf88aa159ade03ec213aaf9d7abc92d96f5d03e110c1f84ef6a853fb02d830d.json  query-8f10d6a2ce04c588cc4cb25cc9a880b2d98258fb48f7e6a5960a715bdd1f9f0b.json  query-9e0e5d3f27a297a73024d3a8f4ea369242340be2fd149e70c8cb45f312a412dc.json  query-d0b05f28b4cb3bc9f77f0400d961256f3a91cd609139825ea1c06226b5163583.json  query-d13670063236ef1ec83c335baac3a2dacdbe1613c003419390bd38ea9ea1398e.json
backend/src/: lib.rs  main.rs
backend/src/db/: connection.rs  mod.rs
backend/src/handlers/: auth.rs  mod.rs  recommendations.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs  recommendation.rs  student_profile.rs  topic.rs  user.rs
backend/src/services/: auth_service.rs  clerk_auth.rs  embeddings.rs  mod.rs  recommender.rs
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/common/: badge.tsx  button.tsx  card.tsx  index.ts  input.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/pages/: AdminPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  HistoryPage.tsx  LandingPage.tsx  RecommendationsPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: useRole.ts
