[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Password hashing
bcrypt = "0.15"

# JWT authentication
jsonwebtoken = "9"

# Vector operations
ndarray = "0.15"

# NLP utilities
regex = "1.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.11"
log = "0.4"