[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Database
sqlx = { version = "0.9.0", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Password hashing
bcrypt = "0.19.1"

# JWT authentication
jsonwebtoken = "10.4.0"

# Vector operations
ndarray = "0.17.2"

# NLP utilities
regex = "1.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Candle for embeddings
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = "0.5.0"  # To download models from HuggingFace
tokenizers = "0.23.1"

# For CPU or GPU support
candle-cpu = "0.8"  # CPU only
